@@ -3,6 +3,7 @@
 
 - Added support for extra-paths (additional Python paths).
 - Deprecated the use of underscores in options.
+- Added support for wildcards (*) in extra-paths.
 
 
 0.1 (2012-12-01)
